feat: update create_tables interface
